UI bug fixes, removed unused css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <nav social>
                         <div class="link__wrapper">
                             <a  class="link hover" href="https://github.com/Sirjoseph94?tab=repositories"> Previous projects</a>
-                            <a class="link hover" href="mailto://joseph@lazpet.com"> Let's talk </a>
+                            <a class="link hover" href="mailto:joseph@lazpet.com"> Let's talk </a>
                         </div>  
                         <div class="social">
                             <a href="https://www.linkedin.com/in/joseph-ero/"><i class="uit uit-linkedin-alt"></i></a>
